Enhance admin dashboard with hub filtering and user role management
- Added a new `HubFilterProvider` to manage hub selection across the admin dashboard.
- Integrated hub filtering into various components, including Analytics, Appointments, and Users tabs.
- Updated the AdminDashboardLayout to fetch and display the hub name based on the assigned hub.
- Modified settings access to restrict hub admins from accessing the settings page.
- Improved user and appointment management by synchronizing hub filters with context.
- Refactored API routes to support hub-based filtering for analytics and notifications.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "admin:create": "ts-node --project scripts/tsconfig.json scripts/createAdminUser.ts",
     "admin:verify": "ts-node --project scripts/tsconfig.json scripts/verifyAdminUser.ts",
     "db:test": "ts-node --project scripts/tsconfig.json scripts/testMongoConnection.ts",
-    "git:check": "ts-node --project scripts/tsconfig.json scripts/checkGitIgnore.ts"
+    "git:check": "ts-node --project scripts/tsconfig.json scripts/checkGitIgnore.ts",
+    "test:setup": "ts-node --project scripts/tsconfig.json scripts/setupTestData.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
